# AleAnalytica

./: README.md  pyproject.toml
app/: __init__.py
app/src/: attitude_columns_likert.py  bar_graphs.py  cluster.py  heatmap_columns.py  modified_dendogram.py  preprocessing.py  read_data.py  split_text.py
app/static/Vendors/scripts/: advanced-components.js  dashboard3.js
app/static/js/: main.js  main_attitude.js  main_media.js  main_occasion.js
app/templates/: attitudes-heatmaps.html  attitudes-likert.html  demographic.html  index.html  media.html  occasion.html
data/: cluster_names.json  columns.json  demographics.json  mapping_file.csv  mapping_file.xlsx
docs/: clustering.ipynb
