[tool.poetry]
name = "clustering-survey-data"
version = "0.1.0"
description = "Capstone project with ABInBev"
authors = ["Ritika Nandi <ritika.nandi77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
Flask = "^3.0.0"
pandas = "^2.1.2"
scikit-learn = "^1.3.2"
openpyxl = "^3.1.2"
plotly = "^5.18.0"
matplotlib = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
